[tool.poetry]
name = "robotpy-gitpod-test-1"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
pip = "^21"
robotpy = { version = "^2021", extras = ["adi", "commands", "commands2", "ctre", "rev", "sim"]} # everything but navx

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
